--- a/.github/workflows/test_branch_changes.yml
+++ b/.github/workflows/test_branch_changes.yml
@@ -15,4 +15,5 @@ jobs:
     steps:
       - name: test package
       - uses: actions/checkout@v2
+      - name: test package
       - run: dotnet test --configuration Release
