--- a/.github/workflows/test_branch_changes.yml
+++ b/.github/workflows/test_branch_changes.yml
@@ -12,6 +12,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: github check
+        uses: actions/checkout@v2
       - name: test package
-      - run: dotnet test --configuration Release
+        run: dotnet test --configuration Release
